Sidebar menu scrollbar issue resolved

--- a/src/app/partial/template/sidebar/sidebar.component.css
+++ b/src/app/partial/template/sidebar/sidebar.component.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding-bottom: 3rem;
-    overflow: auto;
+    overflow: auto !important;
     scrollbar-width: none
 }
 
